--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
       </table>
   </div>
   <hr>
-  <a class="profile" href="details/details.html" target="_">Profile Card</a>
-    <a class="contact" href="contacts/contact.html" target="_blank">Contact Me</a>
-      <a class="profile" href="details/details.html" target="_">Profile Card</a>
+  <a class="profile" href="details/index.html" target="_">Profile Card</a>
+    <a class="contact" href="contacts/index.html" target="_blank">Contact Me</a>
   </body>
 </html>
