--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
   </div>
   <hr>
   <a class="profile" href="details/index.html" target="_">Profile Card</a>
-    <a class="contact" href="contacts/index.html" target="_blank">Contact Me</a>
+    <a class="contact" href="contact.html" target="_blank">Contact Me</a>
   </body>
 </html>
